Adicionando tratamento de bairro

--- a/templates/imobiliaria_atuacao/index.html.twig
+++ b/templates/imobiliaria_atuacao/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}ImobiliariaAtuacao index{% endblock %}
+{% block title %}Locais de Atuação{% endblock %}
 
 {% block body %}
-    <h1>ImobiliariaAtuacao index</h1>
+    <h1>Locais de Atuação</h1>
 
     <table class="table table-striped">
         <thead>
