--- a/templates/imovel/new.html.twig
+++ b/templates/imovel/new.html.twig
@@ -63,7 +63,7 @@
             
             $.ajax({
                 type: "POST",
-                url: "{{ path('pessoa_lista_cidades') }}",
+                url: "{{ path('imovel_lista_cidades_atuacao') }}",
                 cache: false,
                 data: {
                     'estadoId': estadoId
