--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -182,13 +182,19 @@
                                         <li>
                                             <a href="{{ path('imobiliaria_atuacao_index') }}">
                                                 <i class="ti-map-alt"></i>
-                                                <span class="menu-title">Cidades</span>
+                                                <span class="menu-title">Locais de Atuação</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="{{ path('tipo_imovel_index') }}">
                                                 <i class="ti-write"></i>
                                                 <span class="menu-title">Tipos de Imóveis</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('bairro_index') }}">
+                                                <i class="ti-location-pin"></i>
+                                                <span class="menu-title">Bairros</span>
                                             </a>
                                         </li>
                                         <li>
