--- a/templates/imovel/edit.html.twig
+++ b/templates/imovel/edit.html.twig
@@ -92,7 +92,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "{{ path('pessoa_lista_cidades') }}",
+                url: "{{ path('imovel_lista_cidades_atuacao') }}",
                 cache: false,
                 data: {
                     'estadoId': this.value
